<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateContactActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="15dp"

        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enter_email"
    android:textSize="20dp"
    android:textAlignment="center"
    android:layout_marginTop="50dp"
    />


    <EditText
        android:id="@+id/emailCreateField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />


    <EditText
        android:id="@+id/nameCreateField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/button_create_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont_create"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:onClick="addContact"/>
</LinearLayout>