<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:typeface="sans"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/underWelcome"
        android:textAlignment="center"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:id="@+id/enterLayout"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameText"
                android:id="@+id/nameLabel"
                android:textColor="@color/black"
                android:textSize="25dp"

                />
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameField"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:layout_marginBottom="20dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailText"
                android:id="@+id/emailLabel"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:textSize="25dp"
                />
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/emailField"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:textSize="25dp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordText"
                android:id="@+id/passwordLabel"
                android:textColor="@color/black"
                android:textSize="25dp"

                />
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/passwordField"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:textSize="25dp"
                android:layout_marginBottom="20dp"

                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/enterLayout"
        android:layout_marginTop="50dp"
        >

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginLeft="30dp"
            android:id="@+id/sign_in_button"
            android:onClick="signInUser"

            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:layout_marginLeft="5dp"
            android:id="@+id/create_button"
            android:onClick="createUser"
            />

    </LinearLayout>



</RelativeLayout>